--- a/build.gradle
+++ b/build.gradle
@@ -41,12 +41,9 @@ dependencies {
     implementation "io.ktor:ktor-client-apache:$ktor_version"
     implementation "io.ktor:ktor-client-jetty:$ktor_version"
     implementation 'junit:junit:3.8.2'
-    implementation "io.ktor:ktor-auth:$ktor_version"
-    implementation "com.h2database:h2:1.4.199"
-    compile 'org.jetbrains.exposed:exposed-core:0.24.1'
-    compile 'org.jetbrains.exposed:exposed-dao:0.24.1'
-    compile 'org.jetbrains.exposed:exposed-jdbc:0.24.1'
-    compile 'org.jetbrains.exposed:exposed-jodatime:0.24.1'
+    implementation "org.jetbrains.exposed:exposed-core:0.27.1"
+    implementation "org.jetbrains.exposed:exposed-dao:0.27.1"
+    implementation "org.jetbrains.exposed:exposed-jdbc:0.27.1"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 
 
