--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     implementation "io.ktor:ktor-client-apache:$ktor_version"
     implementation "io.ktor:ktor-client-jetty:$ktor_version"
     implementation 'junit:junit:3.8.2'
-    implementation "org.jetbrains.exposed:exposed-core:0.27.1"
-    implementation "org.jetbrains.exposed:exposed-dao:0.27.1"
-    implementation "org.jetbrains.exposed:exposed-jdbc:0.27.1"
+    implementation("com.zaxxer:HikariCP:3.4.5")
+    implementation("org.jetbrains.exposed:exposed:0.17.7")
+    implementation("org.postgresql:postgresql:42.2.16")
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 
 
