--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation "io.ktor:ktor-client-jetty:$ktor_version"
     implementation 'junit:junit:3.8.2'
     implementation 'com.zaxxer:HikariCP:3.4.5'
+    implementation 'at.favre.lib:bcrypt:0.9.0'
+    implementation 'io.ktor:ktor-auth:$ktor_version'
     implementation 'org.jetbrains.exposed:exposed:0.17.7'
     implementation 'org.postgresql:postgresql:42.2.16'
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
